Fix spacing and add background image

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,17 @@
 @forward 'sass/base/';
 @use 'sass/abstracts/' as abs;
+#root {
+	background-image: url(./images/bg-pattern-top-mobile.svg), url(./images/bg-pattern-bottom-mobile.svg);
+	background-repeat: no-repeat;
+	background-position: top left, bottom right;
+	max-width: abs.rem(1440);
+	min-height: 100vh;
+	margin-inline: auto;
+
+	@include abs.breakpoint(medium) {
+		background-image: url(./images/bg-pattern-top-desktop.svg), url(./images/bg-pattern-bottom-desktop.svg);
+	}
+}
 
 .page-wrapper {
 	padding: 5.0625rem 1.5rem;
@@ -7,7 +19,9 @@
 	flex-direction: column;
 	align-items: center;
 
+
 	@include abs.breakpoint(medium) {
+		padding: 8rem 0;
 		width: 80%;
 		max-width: abs.rem(1110);
 		margin-inline: auto;
