--- a/src/components/testimonial/testimonial.scss
+++ b/src/components/testimonial/testimonial.scss
@@ -9,6 +9,7 @@
 		grid-area: testimonials;
 		flex-direction: row;
 		align-self: stretch;
+		gap: 1.875rem;
 	}
 
 	.testimonial {
